# MTBTerrainEditor

./: .gitignore  Cargo.toml  notes  readme.md
assets/: color-picker.ess  config.json  config.toml  stylesheet.ess
assets/backup_saves/: Flat.json  Malta.json  River.json
assets/data/: colors.json  console.json  planes.json  planes_backup.json
assets/mtb_terrain/scenes/: planes.mtbscene.toml  seacoast.mtbscene.toml  test2.mtbscene.toml
assets/mtbterrain/: config.mtbconfig.toml
assets/mtbterrain/scenes/: beach.mtbscene.toml  river.mtbscene.toml  test.mtbscene.toml  test3.mtbscene.toml
assets/saves/: .json  Flat.json  Malta.json  River.json  first_plane.json  mountains.json  test.json  test.proj.json
assets/scenes/: example.scene.json  example.scene.toml  island.scene.toml  island3.scene.toml  mountain.scene.toml  planes.scene.json  river.scene.json  river.scene.toml  test.scene.toml  test2.scene.toml
crates/mtb_core/: Cargo.toml
crates/mtb_core/src/: colors.rs  lib.rs  modifiers.rs  mtb_grid.rs  noises.rs  planes.rs  smoothing.rs  utils.rs  wave.rs
crates/mtb_editor/: Cargo.toml
crates/mtb_editor/src/: boxselect.rs  brush.rs  edit_planes.rs  lib.rs  mtb_camera.rs  mtb_colors.rs  mtb_console.rs  mtb_grid.rs  mtb_ui.rs  vertex.rs
crates/mtb_editor/src/widgets/: button_group.rs  buttons.rs  color_picker.rs  dropdown.rs  mod.rs  modal.rs  side_panel.rs  slider.rs  text_input.rs  text_node.rs  utils.rs
crates/mtb_loader/: Cargo.toml
crates/mtb_loader/src/: lib.rs
examples/: editor.rs  loader.rs
old/mtbterrain_old/: easings.rs  editmode.rs  mod.rs  modifiers.rs  mtb_grid.rs  mtb_gui.rs  planes.rs  utils.rs
src/: camera.rs  main.rs  settings.rs  terrain.rs  utils.rs
src/core/: color.rs  color_gradient.rs  easings.rs  mod.rs  modifiers.rs  noises.rs  offset.rs  planes.rs  terrace.rs  utils.rs  value.rs  vertex.rs  wanders.rs  wave.rs
src/editor/: actions.rs  boxselect.rs  brush.rs  colors.rs  io.rs  mod.rs  mtb_camera.rs  mtb_colors.rs  mtb_console.rs  mtb_grid.rs  mtb_ui.rs  vertex.rs
src/mtbterrain/: gui.rs  mod.rs  modifiers.rs  mtb_grid.rs  mtb_gui.rs  mtbgrid.rs  planes.rs  terraces.rs  utils.rs  wanders.rs
src/old/: terrain.rs
src/terrain/: easings.rs  mod.rs  modifiers.rs  noises.rs  other.rs  planes.rs  shapes.rs  smoothing.rs  terraces.rs  utils.rs  value.rs  wanders.rs  wave.rs
src/tools/: mapgrid.rs  mod.rs
src/ui/: grid.rs  mod.rs
