[package]
name = "mtb_terrain_gen"
version = "0.3.6"
edition = "2021"

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_common_assets = {  version ="0.6.0", features = ["toml"]}
libm = "0.2.7"
serde = "1.0"
noise = "0.8.2"
rand="0.8.5"
grid = { version = "*", default-features = false }

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

# commented out works
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]