[package]
name = "mtb_terrain_gen"
version = "0.5.1"
authors = ["Patrick Chodowski <chodowski.patrick@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Modular Text Based Terrain Generator for Bevy Engine"
repository = "https://github.com/PatrickChodowski/MTBTerrainGen/"
keywords = ["gamedev", "perlin noise", "bevy", "terrain generation"]
categories = ["game-engines", "terrain-generation"]
resolver = "2"


[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }
bevy_common_assets = {  version ="0.7.0", features = ["toml"]}
bevy_mod_picking = {version = "0.15", features = ["selection","backend_raycast","backend_bevy_ui"], default-features = false}
bevy_egui = {version="0.21"}
triangulate = "0.2.0"
libm = "0.2.7"
serde = "1.0"
serde_json = "1.0.104"
strsim = "0.10.0"
noise = "0.8.2"
rand="0.8.5"
pennereq = "0.3.1"

[profile.dev]
opt-level = 1


[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
