[package]
name = "mtb_editor"
version = "0.3.7"
authors = ["Patrick Chodowski <chodowski.patrick@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Modular Text Based Terrain Generator for Bevy Engine"
repository = "https://github.com/PatrickChodowski/MTBTerrainGen/"
keywords = ["gamedev", "perlin noise", "bevy", "terrain generation"]
categories = ["game-engines", "terrain-generation"]
resolver = "2"

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_common_assets = {  version ="0.6.0", features = ["toml"]}
libm = "0.2.7"
serde = "1.0"
noise = "0.8.2"
rand="0.8.5"
mtb_core = { path = "../mtb_core", version = "0.3.7" }

belly = {git = "https://github.com/jkb0o/belly", branch="main"}