[package]
name = "mtb_editor"
version = "0.3.7"
authors = ["Patrick Chodowski <chodowski.patrick@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Modular Text Based Terrain Generator for Bevy Engine"
repository = "https://github.com/PatrickChodowski/MTBTerrainGen/"
keywords = ["gamedev", "perlin noise", "bevy", "terrain generation"]
categories = ["game-engines", "terrain-generation"]
resolver = "2"

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_common_assets = {  version ="0.6.0", features = ["toml"]}
libm = "0.2.7"
serde = "1.0"
serde_json = "1.0.104"
strsim = "0.10.0"
noise = "0.8.2"
rand="0.8.5"
mtb_core = { path = "../mtb_core", version = "0.3.7" }
bevy-inspector-egui = {git="https://github.com/jakobhellermann/bevy-inspector-egui", tag="v0.18.1"}
bevy_mod_picking = {version = "0.13", features = ["selection","backend_raycast","backend_bevy_ui"], default-features = false}
